--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,10 @@
 api_platform:
+    formats:
+        jsonld: ["application/ld+json"]
+        multipart: ["multipart/form-data"]
     title: Hello API Platform
     version: 1.0.0
     defaults:
         stateless: true
         cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
+            vary: ["Content-Type", "Authorization", "Origin"]
